--- a/index.html
+++ b/index.html
@@ -102,13 +102,8 @@
          <div id="mobile-nav-menu" class="collapsed">
             <div id="header" class="header hide-on-desktop">
                <div class="header-menu">
-                  <a href="./index.html" class="link">
-                     HOME
-                  </a>
-               </div>
-               <div class="header-menu">
                   <a href="./coco.html" class="link">
-                     $COCO
+                     $SCALE
                   </a>
                </div>
                <div class="header-menu">
