--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       gtag('config', 'G-QXJYT9J517');
    </script>
    <meta charset="utf-8">
-   <title>Wave Catchers | Market</title>
-   <meta content="3334 Wave Catchers grant you access to the first on-chain whitelist marketplace. Earn $COCO by holding. Never grind for a whitelist again." name="description">
+   <title>Wagmisaurs Marketplace</title>
+   <meta content="5,555 Wagmisaurs have hatched into Web 3 to bring together communites from all across the Metaverse. Holding a Wagmisaur earns you $FOSSIL which can be used to." name="description">
    <meta content="Wave Catchers | Market" property="og:title">
    <meta content="3334 Wave Catchers grant you access to the first on-chain whitelist marketplace. Earn $COCO by holding. Never grind for a whitelist again." property="og:description">
    <meta content="Wave Catchers | Market" property="twitter:title">
@@ -27,7 +27,6 @@
    <link href="css/wave-catchers.css" rel="stylesheet" type="text/css">
    <link href="css/normalize.css" rel="stylesheet" type="text/css">
    <link href="css/index.css" rel="stylesheet" type="text/css">
-   <link href="css/market.css" rel="stylesheet" type="text/css">
    <script
       type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
    <link href="https://github.com/saintmaxi/wave-catchers/blob/main/images/ex1.jpeg?raw=true" rel="shortcut icon" type="image/x-icon">
@@ -44,17 +43,12 @@
       <div id="header" class="header hide-on-mobile">
          <div class="header-menu">
             <a href="./index.html" class="link">
-               HOME
+               MARKETPLACE
             </a>
          </div>
          <div class="header-menu">
-            <a href="./coco.html" class="link">
-               $COCO
-            </a>
-         </div>
-         <div class="header-menu">
-            <a href="./market.html" class="link">
-               MARKET
+            <a href="./fossil.html" class="link">
+               $FOSSIL
             </a>
          </div>
          <div class="header-menu">
@@ -78,12 +72,6 @@
          <a href="https://opensea.io/collection/wavecatchersofficial" target="_blank" class="link w-inline-block">
             <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
          </a>
-         <a href="https://wavecatchersnft.medium.com/" target="_blank" class="link w-inline-block">
-            <img src="images/mediumWhite.png" loading="lazy" alt="">
-         </a>
-         <a href="https://etherscan.io/address/0x1a331c89898c37300ccce1298c62aefd3dfc016c" target="_blank" class="link w-inline-block">
-            <img class="etherscan" src="images/etherscan-white.png" loading="lazy" alt="" style="border-radius: 50%;">
-         </a>
       </div>
       <div id="desktop-wallet-connect-div">
          <button class="button hide-on-mobile clickable" id="account" href="#" onclick=connect()>
@@ -103,12 +91,12 @@
             <div id="header" class="header hide-on-desktop">
                <div class="header-menu">
                   <a href="./coco.html" class="link">
-                     $SCALE
+                     $FOSSIL
                   </a>
                </div>
                <div class="header-menu">
-                  <a href="./market.html" class="link">
-                     MARKET
+                  <a href="./index.html" class="link">
+                     MARKETPLACE
                   </a>
                </div>
                <div class="header-menu">
@@ -132,12 +120,6 @@
                <a href="https://opensea.io/collection/wavecatchersofficial" target="_blank" class="link w-inline-block">
                   <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
                </a>
-               <a href="https://wavecatchersnft.medium.com/" target="_blank" class="link w-inline-block">
-                  <img src="images/mediumWhite.png" loading="lazy" alt="">
-               </a>
-               <a href="https://etherscan.io/address/0x1a331c89898c37300ccce1298c62aefd3dfc016c" target="_blank" class="link w-inline-block">
-                  <img class="etherscan" src="images/etherscan-white.png" loading="lazy" alt="" style="border-radius: 50%;">
-               </a>
             </div>
          </div>
       </div>
@@ -151,6 +133,9 @@
       </div>
    </div>
    <div class="section body-section body-1 wf-section">
+      <div id="marketplace-logo">
+         <img class="coco-icon" src="images/logo.png">
+      </div>
       <div id="selector-div">
          <button id="live-button" class="button active" onclick="showLive()">LIVE<span id="num-live"></span></button>
          <button id="past-button" class="button" onclick="showPast()">PAST<span id="num-past"></span></button>
@@ -206,12 +191,6 @@
                </a>
                <a href="https://opensea.io/collection/wavecatchersofficial" target="_blank" class="link">
                   <img src="images/os-white.png" loading="lazy" alt="">
-               </a>
-               <a href="https://wavecatchersnft.medium.com/" target="_blank" class="link">
-                  <img src="images/mediumBlack.png" loading="lazy" alt="">
-               </a>
-               <a href="https://etherscan.io/address/0x1a331c89898c37300ccce1298c62aefd3dfc016c" target="_blank" class="link w-inline-block">
-                  <img class="etherscan" src="images/etherscan-black.png" loading="lazy" alt="" style="border-radius: 50%;">
                </a>
             </div>
          </div>
