--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
    <title>Wagmisaurs Marketplace</title>
    <meta content="5,555 Wagmisaurs have hatched into Web 3 to bring together communites from all across the Metaverse. Holding a Wagmisaur earns you $FOSSIL which can be used to." name="description">
    <meta content="Wave Catchers | Market" property="og:title">
-   <meta content="3334 Wave Catchers grant you access to the first on-chain whitelist marketplace. Earn $COCO by holding. Never grind for a whitelist again." property="og:description">
+   <meta content="3334 Wave Catchers grant you access to the first on-chain whitelist marketplace. Earn $FOSSIL by holding. Never grind for a whitelist again." property="og:description">
    <meta content="Wave Catchers | Market" property="twitter:title">
-   <meta content="3334 Wave Catchers grant you access to the first on-chain whitelist marketplace. Earn $COCO by holding. Never grind for a whitelist again." property="twitter:description">
+   <meta content="3334 Wave Catchers grant you access to the first on-chain whitelist marketplace. Earn $FOSSIL by holding. Never grind for a whitelist again." property="twitter:description">
    <meta property="og:type" content="website">
    <meta property="og:image" content="https://github.com/saintmaxi/wave-catchers/blob/main/images/ex1.jpeg?raw=true">
    <meta property="og:image:width" content="300">
@@ -90,7 +90,7 @@
          <div id="mobile-nav-menu" class="collapsed">
             <div id="header" class="header hide-on-desktop">
                <div class="header-menu">
-                  <a href="./coco.html" class="link">
+                  <a href="./fossil.html" class="link">
                      $FOSSIL
                   </a>
                </div>
@@ -127,14 +127,13 @@
    <div id="approval-container" class="section body-section body-1 wf-section hidden">
       <div id="approval" class="container w-container box" style="text-align: center;">
          <h1>APPROVE MARKETPLACE</h1><br>
-         <h3>In order to acquire WL slots with <img class="coco-icon" src="images/coco.png">, you must first approve the V1 and V2 marketplace contracts to spend your <img class="coco-icon" src="images/coco.png">.</h3><br>
-         <button class="button" id="approval-button" onclick="approveCocoToMarket()">APPROVE V1</button>
-         <button class="button" id="approval-button-new" onclick="approveCocoToNewMarket()">APPROVE V2</button>
+         <h3>In order to acquire WL slots with <img class="fossil-icon" src="images/fossil.png">, you must first approve the V1 and V2 marketplace contracts to spend your <img class="fossil-icon" src="images/fossil.png">.</h3><br>
+         <button class="button" id="approval-button" onclick="approveFossilToMarket()">APPROVE V1</button>
       </div>
    </div>
    <div class="section body-section body-1 wf-section">
       <div id="marketplace-logo">
-         <img class="coco-icon" src="images/logo.png">
+         <img class="fossil-icon" src="images/logo.png">
       </div>
       <div id="selector-div">
          <button id="live-button" class="button active" onclick="showLive()">LIVE<span id="num-live"></span></button>
@@ -198,9 +197,9 @@
    </div>
    <img src="images/WebsiteBG-mobile.png" loading="lazy" alt="" class="banner-img fixed-banner hide-on-desktop">
    <img src="images/WebsiteBG.png" loading="lazy" alt="" class="banner-img fixed-banner hide-on-mobile">
-   <div class="coco-balance-float">
-      <div>Balance: <span id="coco-balance"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span></div>
-      <img class="coco-icon" src="./images/coco.png">
+   <div class="fossil-balance-float">
+      <div>Balance: <span id="fossil-balance"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span></div>
+      <img class="fossil-icon" src="./images/fossil.png">
    </div>
    <!-- <div id="copyright-div">
       <a href="./terms-and-conditions.html" class="link">VIEW TERMS AND CONDITIONS</a>
