--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       gtag('config', 'G-QXJYT9J517');
    </script>
    <meta charset="utf-8">
-   <title>Wagmisaurs Marketplace</title>
-   <meta content="5,555 Wagmisaurs have hatched into Web 3 to bring together communites from all across the Metaverse. Holding a Wagmisaur earns you $FOSSIL which can be used to." name="description">
+   <title>Wave Catchers | Market</title>
+   <meta content="3334 Wave Catchers grant you access to the first on-chain whitelist marketplace. Earn $COCO by holding. Never grind for a whitelist again." name="description">
    <meta content="Wave Catchers | Market" property="og:title">
    <meta content="3334 Wave Catchers grant you access to the first on-chain whitelist marketplace. Earn $COCO by holding. Never grind for a whitelist again." property="og:description">
    <meta content="Wave Catchers | Market" property="twitter:title">
@@ -27,6 +27,7 @@
    <link href="css/wave-catchers.css" rel="stylesheet" type="text/css">
    <link href="css/normalize.css" rel="stylesheet" type="text/css">
    <link href="css/index.css" rel="stylesheet" type="text/css">
+   <link href="css/market.css" rel="stylesheet" type="text/css">
    <script
       type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
    <link href="https://github.com/saintmaxi/wave-catchers/blob/main/images/ex1.jpeg?raw=true" rel="shortcut icon" type="image/x-icon">
@@ -43,12 +44,17 @@
       <div id="header" class="header hide-on-mobile">
          <div class="header-menu">
             <a href="./index.html" class="link">
-               MARKETPLACE
+               HOME
             </a>
          </div>
          <div class="header-menu">
-            <a href="./fossil.html" class="link">
-               $FOSSIL
+            <a href="./coco.html" class="link">
+               $COCO
+            </a>
+         </div>
+         <div class="header-menu">
+            <a href="./market.html" class="link">
+               MARKET
             </a>
          </div>
          <div class="header-menu">
@@ -72,6 +78,12 @@
          <a href="https://opensea.io/collection/wavecatchersofficial" target="_blank" class="link w-inline-block">
             <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
          </a>
+         <a href="https://wavecatchersnft.medium.com/" target="_blank" class="link w-inline-block">
+            <img src="images/mediumWhite.png" loading="lazy" alt="">
+         </a>
+         <a href="https://etherscan.io/address/0x1a331c89898c37300ccce1298c62aefd3dfc016c" target="_blank" class="link w-inline-block">
+            <img class="etherscan" src="images/etherscan-white.png" loading="lazy" alt="" style="border-radius: 50%;">
+         </a>
       </div>
       <div id="desktop-wallet-connect-div">
          <button class="button hide-on-mobile clickable" id="account" href="#" onclick=connect()>
@@ -91,12 +103,12 @@
             <div id="header" class="header hide-on-desktop">
                <div class="header-menu">
                   <a href="./coco.html" class="link">
-                     $FOSSIL
+                     $SCALE
                   </a>
                </div>
                <div class="header-menu">
-                  <a href="./index.html" class="link">
-                     MARKETPLACE
+                  <a href="./market.html" class="link">
+                     MARKET
                   </a>
                </div>
                <div class="header-menu">
@@ -120,6 +132,12 @@
                <a href="https://opensea.io/collection/wavecatchersofficial" target="_blank" class="link w-inline-block">
                   <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
                </a>
+               <a href="https://wavecatchersnft.medium.com/" target="_blank" class="link w-inline-block">
+                  <img src="images/mediumWhite.png" loading="lazy" alt="">
+               </a>
+               <a href="https://etherscan.io/address/0x1a331c89898c37300ccce1298c62aefd3dfc016c" target="_blank" class="link w-inline-block">
+                  <img class="etherscan" src="images/etherscan-white.png" loading="lazy" alt="" style="border-radius: 50%;">
+               </a>
             </div>
          </div>
       </div>
@@ -133,9 +151,6 @@
       </div>
    </div>
    <div class="section body-section body-1 wf-section">
-      <div id="marketplace-logo">
-         <img class="coco-icon" src="images/logo.png">
-      </div>
       <div id="selector-div">
          <button id="live-button" class="button active" onclick="showLive()">LIVE<span id="num-live"></span></button>
          <button id="past-button" class="button" onclick="showPast()">PAST<span id="num-past"></span></button>
@@ -191,6 +206,12 @@
                </a>
                <a href="https://opensea.io/collection/wavecatchersofficial" target="_blank" class="link">
                   <img src="images/os-white.png" loading="lazy" alt="">
+               </a>
+               <a href="https://wavecatchersnft.medium.com/" target="_blank" class="link">
+                  <img src="images/mediumBlack.png" loading="lazy" alt="">
+               </a>
+               <a href="https://etherscan.io/address/0x1a331c89898c37300ccce1298c62aefd3dfc016c" target="_blank" class="link w-inline-block">
+                  <img class="etherscan" src="images/etherscan-black.png" loading="lazy" alt="" style="border-radius: 50%;">
                </a>
             </div>
          </div>
