Revert "Update index.html"
This reverts commit 7a1d42f9c7872ea74951a89cec9d63a05091f88f.

--- a/index.html
+++ b/index.html
@@ -102,8 +102,13 @@
          <div id="mobile-nav-menu" class="collapsed">
             <div id="header" class="header hide-on-desktop">
                <div class="header-menu">
+                  <a href="./index.html" class="link">
+                     HOME
+                  </a>
+               </div>
+               <div class="header-menu">
                   <a href="./coco.html" class="link">
-                     $SCALE
+                     $COCO
                   </a>
                </div>
                <div class="header-menu">
