--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <meta content="Wasgmisaurs Market" property="twitter:title">
    <meta content="5,555 Wagmisaurs hatched into Web3 to become a part of the Metaverse. Hold your Wagmisaurs to generate $FOSSIL which can be used to purchase whitelist for other NFT projects!" property="twitter:description">
    <meta property="og:type" content="website">
-   <meta property="og:image" content="https://github.com/michael-fourie/wave-catchers-prod/tree/main/images/wagmi-head.jpeg?raw=true">
+   <meta property="og:image" content="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/wagmi-head.jpg">
    <meta property="og:image:width" content="300">
    <meta property="og:image:height" content="300">
    <meta name="twitter:image" content="https://github.com/michael-fourie/wave-catchers-prod/tree/main/images/wagmi-head.jpeg?raw=true" />
@@ -22,15 +22,15 @@
    <link href="css/market.css" rel="stylesheet" type="text/css">
    <script
       type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-   <link href="https://github.com/michael-fourie/wave-catchers-prod/tree/main/images/wagmi-head.jpeg?raw=true" rel="shortcut icon" type="image/x-icon">
-   <link href="https://github.com/michael-fourie/wave-catchers-prod/tree/main/images/wagmi-head.jpeg?raw=true" rel="apple-touch-icon">
+   <link href="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/wagmi-head.jpg" rel="shortcut icon" type="image/x-icon">
+   <link href="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/wagmi-head.jpg" rel="apple-touch-icon">
 </head>
 
 <body class="body">
    <div id="top">
       <div id="title-section" class="header">
          <div id="title">
-            <a href="./index.html" class="title-link">Wagmisaurs</a>
+            <a href="https://wagmisaurs.com" class="title-link">Wagmisaurs</a>
          </div>
       </div>
       <div id="header" class="header hide-on-mobile">
@@ -64,12 +64,6 @@
          </a>
          <a href="https://opensea.io/collection/wavecatchersofficial" target="_blank" class="link w-inline-block">
             <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
-         </a>
-         <a href="https://wavecatchersnft.medium.com/" target="_blank" class="link w-inline-block">
-            <img src="images/mediumWhite.png" loading="lazy" alt="">
-         </a>
-         <a href="https://etherscan.io/address/0x1a331c89898c37300ccce1298c62aefd3dfc016c" target="_blank" class="link w-inline-block">
-            <img class="etherscan" src="images/etherscan-white.png" loading="lazy" alt="" style="border-radius: 50%;">
          </a>
       </div>
       <div id="desktop-wallet-connect-div">
@@ -124,12 +118,6 @@
                <a href="https://opensea.io/collection/wavecatchersofficial" target="_blank" class="link w-inline-block">
                   <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
                </a>
-               <a href="https://wavecatchersnft.medium.com/" target="_blank" class="link w-inline-block">
-                  <img src="images/mediumWhite.png" loading="lazy" alt="">
-               </a>
-               <a href="https://etherscan.io/address/0x1a331c89898c37300ccce1298c62aefd3dfc016c" target="_blank" class="link w-inline-block">
-                  <img class="etherscan" src="images/etherscan-white.png" loading="lazy" alt="" style="border-radius: 50%;">
-               </a>
             </div>
          </div>
       </div>
@@ -139,7 +127,6 @@
          <h1>APPROVE MARKETPLACE</h1><br>
          <h3>In order to acquire WL slots with <img class="coco-icon" src="images/coco.png">, you must first approve the V1 and V2 marketplace contracts to spend your <img class="coco-icon" src="images/coco.png">.</h3><br>
          <button class="button" id="approval-button" onclick="approveCocoToMarket()">APPROVE V1</button>
-         <button class="button" id="approval-button-new" onclick="approveCocoToNewMarket()">APPROVE V2</button>
       </div>
    </div>
    <div class="section body-section body-1 wf-section">
@@ -157,7 +144,7 @@
             <div class="cover">
                <button class="button">LOADING<span class="one">.</span><span class="two">.</span><span class="three">.</span></button>
             </div>
-            <img class="collection-img" src="./images/ticket.jpeg">
+            <img class="collection-img" src="./images/ticket.png">
             <div class="collection-info">
                <h3>???</h3>
                <h4>??? | ???/??? Purchased</h4>
@@ -173,7 +160,7 @@
             <div class="cover">
                <button class="button">LOADING<span class="one">.</span><span class="two">.</span><span class="three">.</span></button>
             </div>
-            <img class="collection-img" src="./images/ticket.jpeg">
+            <img class="collection-img" src="./images/ticket.png">
             <div class="collection-info">
                <h3>???</h3>
                <h4>??? | ???/??? Purchased</h4>
@@ -198,12 +185,6 @@
                </a>
                <a href="https://opensea.io/collection/wavecatchersofficial" target="_blank" class="link">
                   <img src="images/os-white.png" loading="lazy" alt="">
-               </a>
-               <a href="https://wavecatchersnft.medium.com/" target="_blank" class="link">
-                  <img src="images/mediumBlack.png" loading="lazy" alt="">
-               </a>
-               <a href="https://etherscan.io/address/0x1a331c89898c37300ccce1298c62aefd3dfc016c" target="_blank" class="link w-inline-block">
-                  <img class="etherscan" src="images/etherscan-black.png" loading="lazy" alt="" style="border-radius: 50%;">
                </a>
             </div>
          </div>
