--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
    <div id="top">
       <div id="title-section" class="header">
          <div id="title">
-            <a href="https://wagmisaurs.com" class="title-link">Wagmisaurs</a>
+            <a href="https://wagmisaurs.com" class="link">
+               <img id="wagmi-logo" src="images/wagmiLogo.png" loading="lazy" alt="">
+            </a>
          </div>
       </div>
       <div id="header" class="header hide-on-mobile">
@@ -40,17 +42,12 @@
             </a>
          </div>
          <div class="header-menu">
-            <a href="./fossil.html" class="link">
+            <a href="" class="link">
                $FOSSIL
             </a>
          </div>
          <div class="header-menu">
-            <a href="./lookup.html" class="link">
-               LOOKUP
-            </a>
-         </div>
-         <div class="header-menu">
-            <a href="./raffle.html" class="link">
+            <a href="" class="link">
                RAFFLE
             </a>
          </div>
@@ -122,13 +119,15 @@
          </div>
       </div>
    </div>
+
    <div id="approval-container" class="section body-section body-1 wf-section hidden">
       <div id="approval" class="container w-container box" style="text-align: center;">
          <h1>APPROVE MARKETPLACE</h1><br>
-         <h3>In order to acquire WL slots with <img class="coco-icon" src="images/coco.png">, you must first approve the V1 and V2 marketplace contracts to spend your <img class="coco-icon" src="images/coco.png">.</h3><br>
+         <h3>In order to acquire WL slots with <img class="coco-icon" src="images/fossil.png">, you must first approve the V1 and V2 marketplace contracts to spend your <img class="coco-icon" src="images/coco.png">.</h3><br>
          <button class="button" id="approval-button" onclick="approveCocoToMarket()">APPROVE V1</button>
       </div>
    </div>
+
    <div class="section body-section body-1 wf-section">
       <div id="selector-div">
          <button id="live-button" class="button active" onclick="showLive()">LIVE<span id="num-live"></span></button>
@@ -139,6 +138,7 @@
       <h2 id="scroll-indicator" class="hide-on-desktop" style="text-align: center;color: white;">
          <img class="down-arrow" src="images/down-arrow.png"> SCROLL<span class="hide-on-mobile"> FOR MORE</span> <img class="down-arrow" src="images/down-arrow.png">
       </h2>
+
       <div id="live-collections">
          <div id="ex1" class="partner-collection example">
             <div class="cover">
@@ -155,6 +155,7 @@
             </div>
          </div>
       </div>
+
       <div id="past-collections" class="hidden">
          <div id="ex2" class="partner-collection example">
             <div class="cover">
@@ -173,6 +174,8 @@
       </div>
    </div>
    </div>
+
+
    <div>
       <div class="section body-section footer wf-section">
          <div class="container w-container footer-section">
@@ -194,7 +197,7 @@
    <img src="images/WebsiteBG.png" loading="lazy" alt="" class="banner-img fixed-banner hide-on-mobile">
    <div class="coco-balance-float">
       <div>Balance: <span id="coco-balance"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span></div>
-      <img class="coco-icon" src="./images/coco.png">
+      <img class="coco-icon" src="./images/fossil.png">
    </div>
    <!-- <div id="copyright-div">
       <a href="./terms-and-conditions.html" class="link">VIEW TERMS AND CONDITIONS</a>
