--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
    <div id="approval-container" class="section body-section body-1 wf-section hidden">
       <div id="approval" class="container w-container box" style="text-align: center;">
          <h1>APPROVE MARKETPLACE</h1><br>
-         <h3>In order to acquire WL slots with <img class="coco-icon" src="images/fossil.png">, you must first approve the V1 and V2 marketplace contracts to spend your <img class="coco-icon" src="images/coco.png">.</h3><br>
-         <button class="button" id="approval-button" onclick="approveCocoToMarket()">APPROVE V1</button>
+         <h3>To spend your precious <img class="coco-icon" src="images/fossil.png">, you must first approve the marketplace contracts, allowing the contract to spend your <img class="coco-icon" src="images/fossil.png">.</h3><br>
+         <button class="button" id="approval-button" onclick="approveCocoToMarket()">Approve</button>
       </div>
    </div>
 
