--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </a>
          </div>
          <div class="header-menu">
-            <a href="" class="link">
+            <a href="./raffle.html" class="link">
                RAFFLE
             </a>
          </div>
@@ -77,18 +77,13 @@
                   </a>
                </div>
                <div class="header-menu">
-                  <a href="./coco.html" class="link">
-                     $COCO
+                  <a href="./fossil.html" class="link">
+                     $FOSSIL
                   </a>
                </div>
                <div class="header-menu">
                   <a href="./market.html" class="link">
                      MARKET
-                  </a>
-               </div>
-               <div class="header-menu">
-                  <a href="./lookup.html" class="link">
-                     LOOKUP
                   </a>
                </div>
                <div class="header-menu">
