--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div id="selector-div">
          <div class="live-past-border">
             <button id="live-button" class="button active" onclick="showLive()">LIVE<span id="num-live"></span></button>
-            <button id="past-button" class="button" onclick="showPast()">PAST<span id="num-past"></span></button>
+            <button id="past-button" class="button inactive" onclick="showPast()">PAST<span id="num-past"></span></button>
          </div>
 
          <div class="coco-balance-float">
