--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div id="approval" class="container w-container box" style="text-align: center;">
          <h1>APPROVE MARKETPLACE</h1><br>
          <h3>To spend your precious <img class="coco-icon" src="images/fossil.png">, you must first approve the marketplace contracts, allowing the contract to spend your <img class="coco-icon" src="images/fossil.png">.</h3><br>
-         <button class="button" id="approval-button" onclick="approveCocoToMarket()">Approve</button>
+         <button class="button approval" id="approval-button" onclick="approveCocoToMarket()">Approve</button>
       </div>
    </div>
 
