--- a/raffle.html
+++ b/raffle.html
@@ -112,7 +112,7 @@
             <div id="raffle-div-container">
                <div class="raffle-div">
                   <h2 id="raffle-title">???</h2>
-                  <img src="./images/ticket.jpeg" id="current-raffle-img">
+                  <img src="./images/ticket.png" id="current-raffle-img">
                   <h2 id="time-left-div" class="hidden">
                      <span id="time-left">-</span>
                   </h2>
@@ -137,7 +137,7 @@
             <div class="cover">
                <button class="button">LOADING<span class="one">.</span><span class="two">.</span><span class="three">.</span></button>
             </div>
-            <img class="collection-img" src="./images/ticket.jpeg">
+            <img class="collection-img" src="./images/ticket.png">
             <div class="collection-info">
                <h3>???</h3>
                <button class="button">EXPIRED</button>
