--- a/raffle.html
+++ b/raffle.html
@@ -103,16 +103,22 @@
    </div>
    <div class="section body-section body-1 wf-section">
       <div id="selector-div">
-         <button id="live-button" class="button active" onclick="showLiveRaffles()">LATEST<span id="num-live"></span></button>
-         <button id="past-button" class="button inactive" onclick="showPastRaffles()">PAST<span id="num-past"></span></button>
-      </div>
+         <div class="live-past-border">
+            <button id="live-button" class="button active" onclick="showLive()">LIVE<span id="num-live"></span></button>
+            <button id="past-button" class="button inactive" onclick="showPast()">PAST<span id="num-past"></span></button>
+         </div>
+
+         <div class="coco-balance-float">
+            <div>Balance: <span id="coco-balance"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span></div>
+            <img class="coco-icon" src="./images/fossil.png">
+         </div>
       <div id="live-raffles">
          <div id="raffle" class="container w-container box"  style="text-align: center;">
             <h1><span class="hide-on-mobile">$FOSSIL</span> RAFFLE</h1>
             <div id="raffle-div-container">
                <div class="raffle-div">
                   <h2 id="raffle-title">???</h2>
-                  <img src="./images/ticket.png" id="current-raffle-img">
+                  <img width="25%" src="./images/ticket.png" id="current-raffle-img">
                   <h2 id="time-left-div" class="hidden">
                      <span id="time-left">-</span>
                   </h2>
