--- a/raffle.html
+++ b/raffle.html
@@ -103,8 +103,14 @@
    </div>
    <div class="section body-section body-1 wf-section">
       <div id="selector-div">
-         <button id="live-button" class="button active" onclick="showLiveRaffles()">LATEST<span id="num-live"></span></button>
-         <button id="past-button" class="button inactive" onclick="showPastRaffles()">PAST<span id="num-past"></span></button>
+         <div class="live-past-border">
+            <button id="live-button" class="button active" onclick="showLiveRaffles()">LATEST<span id="num-live"></span></button>
+            <button id="past-button" class="button inactive" onclick="showPastRaffles()">PAST<span id="num-past"></span></button>
+         </div>
+         <div class="coco-balance-float">
+            <div>Balance: <span id="coco-balance"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span></div>
+            <img class="coco-icon" src="./images/fossil.png">
+         </div>
       </div>
       <div id="live-raffles">
          <div id="raffle" class="container w-container box"  style="text-align: center;">
@@ -132,7 +138,7 @@
             </div>
       </div>
       </div>
-      <div id="past-raffles" class="hidden">
+      <div id="past-raffles" class="raffle-flex hidden">
          <div id="ex2" class="partner-collection example">
             <div class="cover">
                <button class="button">LOADING<span class="one">.</span><span class="two">.</span><span class="three">.</span></button>
