--- a/raffle.html
+++ b/raffle.html
@@ -99,7 +99,7 @@
       <div id="approval" class="container w-container box" style="text-align: center;">
          <h1>APPROVE MARKETPLACE</h1><br>
          <h3>In order to enter raffles with <img class="coco-icon" src="images/fossil.png">, you must first approve the V2 marketplace contract to spend your <img class="coco-icon" src="images/fossil.png">.</h3><br>
-         <button class="button" id="approval-button" onclick="approveCocoToMarket()">APPROVE V2</button>
+         <button class="button approval" id="approval-button" onclick="approveCocoToMarket()">APPROVE V2</button>
       </div>
    </div>
    <div class="section body-section body-1 wf-section">
