--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </a>
          </div>
          <div class="header-menu">
-            <a href="" class="link">
+            <a href="./fossil.html" class="link">
                $FOSSIL
             </a>
          </div>
@@ -73,17 +73,12 @@
             <div id="header" class="header hide-on-desktop">
                <div class="header-menu">
                   <a href="./index.html" class="link">
-                     HOME
+                     MARKETPLACE
                   </a>
                </div>
                <div class="header-menu">
                   <a href="./fossil.html" class="link">
                      $FOSSIL
-                  </a>
-               </div>
-               <div class="header-menu">
-                  <a href="./market.html" class="link">
-                     MARKET
                   </a>
                </div>
                <div class="header-menu">
