--- a/fossil.html
+++ b/fossil.html
@@ -23,9 +23,9 @@
    <link href="css/fossil.css" rel="stylesheet" type="text/css">
    <script
       type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-   <link href="https://github.com/saintmaxi/wave-catchers/blob/main/images/ex1.jpeg?raw=true" rel="shortcut icon" type="image/x-icon">
-   <link href="https://github.com/saintmaxi/wave-catchers/blob/main/images/ex1.jpeg?raw=true" rel="apple-touch-icon">
-</head>
+      <link href="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/wagmi-head.jpg" rel="shortcut icon" type="image/x-icon">
+      <link href="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/wagmi-head.jpg" rel="apple-touch-icon">
+   </head>
 
 <body class="body">
    <div id="top">
@@ -142,10 +142,6 @@
             </div>
          </div>
       </div>
-   </div>
-   <div id="copyright-div">
-      <a href="./terms-and-conditions.html" class="link">VIEW TERMS AND CONDITIONS</a>
-      <button class="button hide-on-mobile" id="clear-button" onclick="clearPendingTxs()">Refresh Cache</button>
    </div>
    <div id="pending-transactions"></div>
    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=611d0d9b752438eba744e08d"
