--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
       </div>
    </div>
 
+   <div class="market-logo">
+      <img src="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/market-logo.png" alt="">
+   </div>
+
    <div id="approval-container" class="section body-section body-1 wf-section hidden">
       <div id="approval" class="container w-container box" style="text-align: center;">
          <h1>APPROVE MARKETPLACE</h1><br>
