--- a/raffle.html
+++ b/raffle.html
@@ -95,6 +95,11 @@
       </div>
    </div>
    <br>
+
+   <div class="market-logo">
+      <img class="market-logo-img" src="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/raffle-logo.png" alt="">
+   </div>
+
    <div id="approval-container" class="section body-section body-1 wf-section hidden">
       <div id="approval" class="container w-container box" style="text-align: center;">
          <h1>APPROVE MARKETPLACE</h1><br>
