--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
          </div>
       </div>
    </div>
-
+   
    <div class="market-logo">
-      <img src="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/market-logo.png" alt="">
+      <img class="market-logo-img" src="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/market-logo.png" alt="">
    </div>
 
    <div id="approval-container" class="section body-section body-1 wf-section hidden">
