--- a/fossil.html
+++ b/fossil.html
@@ -99,12 +99,12 @@
          <div id="your-coco-container" class="box coco-balance-container">
             <h2 class="text-primary">Your $FOSSIL</h2>
             <h2><span id="your-coco"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span> <img src="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/fossil.png" class="coco-icon"></h2>
-            <button class="button" onclick="importCocoToWallet()">ADD $FOSSIL TO METAMASK</button>
+            <button class="button approval" onclick="importCocoToWallet()">ADD $FOSSIL TO METAMASK</button>
          </div>
          <div class="box coco-balance-container"> 
             <h2 class="text-primary">Claimable $FOSSIL</h2>
             <h2><span id="claimable-coco"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span> <img src="https://raw.githubusercontent.com/michael-fourie/wave-catchers-prod/main/images/fossil.png" class="coco-icon"></h2>
-            <button class="button" onclick="claimAll()">CLAIM $FOSSIL </button>
+            <button class="button approval" onclick="claimAll()">CLAIM $FOSSIL </button>
          </div>
       </div>
    </div>
@@ -112,8 +112,8 @@
       <div id="staked-wavecatcher-wrapper" class="staking-section">
          <h2 class="text-primary">YOUR CREW (<span id="your-wavecatchers-num"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span>)</h2>
               <div class="stake-buttons">
-                <button id="unstakeSelectedButton" href="#" class="button" onclick="claimByIds()">CLAIM SELECTED</button>
-                <button id="unstakeallButton" href="#" class="button" onclick="claimAll()">CLAIM ALL</button>
+                <button id="unstakeSelectedButton" href="#" class="button approval" onclick="claimByIds()">CLAIM SELECTED</button>
+                <button id="unstakeallButton" href="#" class="button approval" onclick="claimAll()">CLAIM ALL</button>
               </div>
               <div style="text-align: center;">
                 <h3 class="selected">Selected:</h3>
