--- a/raffle.html
+++ b/raffle.html
@@ -43,7 +43,7 @@
             </a>
          </div>
          <div class="header-menu">
-            <a href="" class="link">
+            <a href="./fossil.html" class="link">
                $FOSSIL
             </a>
          </div>
